# bilback

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
bilback/: __init__.py  conftest.py  geometry.py  time.py  utils.py
bilback/cupy/: __init__.py  time.py
bilback/cython/: __init__.py  geometry.py  time.py
bilback/jax/: __init__.py  time.py
bilback/mlx/: __init__.py  time.py
bilback/rust/: geometry.py  time.py  types.py
bilback/test/: __init__.py  test_geometry.py  test_time.py
docs/: conf.py  geometry.rst  index.rst  time.rst
